# mlOps

./: .gitignore  README.md  pyproject.toml
notebooks/: turan-hagverdiyev-eda.ipynb  turan-hagverdiyev-fe1.ipynb  turan-hagverdiyev-fe2.ipynb  turan-hagverdiyev-trainmodel.ipynb
src/data/: make_dataset_fe1.py
src/features/: build_features_fe1.py  build_features_fe2.py  build_features_trainmodel.py
src/models/: predict_model.py  predict_model_fe1.py  predict_model_fe2.py  predict_model_trainmodel.py  train_model.py  train_model_fe1.py  train_model_fe2.py  train_model_trainmodel.py
