[project]
name = "mlOps"
version = "0.1.0"
description = "An MLOps project for training and predicting models."
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "TuranHaqverdiyev", email = "hagverdituran@gmail.com" }]
dependencies = [
    # runtime deps go here, e.g. "pandas>=2.2"
    "sentence-transformers>=5.1.0",
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
skip_glob = ["data/**", "reports/**", "models/**", "notebooks/**"]
